# AI-Agent-Engineering

WeeK 3 /Homework/: .gitignore  DEMO_DEPLOYMENT_GUIDE.md  FINAL_PROJECT_SUMMARY.md  MULTI_AGENT_README.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_DEMO_CARD.md  README.md  START_HERE.md  SUBMISSION_SUMMARY.md  TESTING_EVIDENCE.md  WEB_UI_GUIDE.md  launch_demo.sh  launch_ui.sh  main.py  multi_agent_demo.py  multi_agent_system.py  pyproject.toml  run_all_demos.sh  test_server.py  web_ui.py  week_03_hw_template.ipynb
Week 1/Pre-requists/: Basic Setup Pre-Requisites Note Book (1).ipynb
Week 1/Project/: .gitignore  README.md  Solution - Week 01 HomeWork Template.ipynb  Week 01 HomeWork Template.ipynb
Week 1/Week 1 Coding Notebook/: week_01_lesson_01.ipynb  week_01_lesson_02.ipynb  week_01_lesson_03.ipynb  week_01_lesson_04.ipynb  week_01_lesson_05.ipynb
