[project]
name = "ecommerce-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "gradio>=5.47.2",
    "mcp>=1.15.0",
    "openai>=2.0.0",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
]
